--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 {% block title %} Photo Viewing  Home {% endblock %} 
 
 {% block body %}
-<div class="jumbotron bg-primary text-center">
+<div class="jumbotron bg-info text-center">
   <h1>Welcome to ArtCritique </h1>
   <p>Browse, rate and critique art</p>
 </div>
