--- a/templates/all_photos.html
+++ b/templates/all_photos.html
@@ -3,37 +3,14 @@
 
 {% block body %}
 <div class="container">
- 
-  <h2> Welcome! {{user.fname}} {{user.lname}}, Here is my list of Photos</h2>
   <br>
-  
-    <!--   <ul>
-        
-        <li><a href="/user_details/{{session['user_id']}}">View my data</a></li>
-      </ul> -->
-        
-      <!-- <form action= "/logout_user" method = "POST">
-        <p>
-        <input type="submit" value="Sign out">
-      </p>
-      </form> -->
-    
-  
+  <h2> Welcome! {{user.fname}} {{user.lname}}, Here is the list of artist's Photos</h2>
+  <br>
   
     {% for photo in photos %}
     <div class="row mb-3">
       
-      <!--   <div class=" media" >
-          <img src="/static/{{photo.img_path}}" class="mr-3 mediumImage" alt="...">
-          <div class="media-body ">
-              <h5 class="mt-0"> {{ photo.location }} </h5>
-              <p class="">{{ photo.description }}</p>
-              <a href="/all_photos/{{ photo.photo_id }}" class="btn btn-primary">More Details</a>
-          </div>
-            
-        </div> -->
-
-        <div class="card mb-3" style="max-width: 1000 px;" >
+      <div class="card mb-3" style="max-width: 1000 px;" >
           <div class="row no-gutters">
             <div class="col-md-4">
               <img src="/static/{{photo.img_path}}" class="card-img " alt="...">
@@ -50,18 +27,7 @@
      
     </div>
  
-     <!--  <li>
-        <a href="/all_photos/{{ photo.photo_id }}">
-         
-          <img class="mediumImage" src="/static/{{photo.img_path}}">
-          {{ photo.location }}
-        </a>
-       
-
-        
-      </li> -->
     {% endfor %}
   
-
 </div>
 {% endblock %}
