--- a/templates/base1.html
+++ b/templates/base1.html
@@ -15,7 +15,7 @@
   <body>
     
     {% for msg in get_flashed_messages() %}
-    <p class="flash-msg">
+    <p class="flash-msg text-center">
       {{ msg }}
     </p>
   {% endfor %}
