--- a/templates/stats_photo.html
+++ b/templates/stats_photo.html
@@ -47,7 +47,7 @@
       </div>  
       <div class="row"> 
         <div class="col">
-        <div id='img_details_div'></div>
+        <div class="card" id='img_details_div'></div>
       </div>
       
       <div id="map" class="col"></div>
@@ -70,7 +70,7 @@
       <div class="row mt-4 pr-12">
         <div class="row no-gutters">
           <div class="col-12">  
-            <div class="card" style="width: 71rem;">
+            <div class="card" style="width: 72rem;">
               <div class="card-header text-center bg-info">
                 <div id = 'count'> </div>
                 <div id='users_details_div' ></div>
