--- a/templates/all_photos.html
+++ b/templates/all_photos.html
@@ -10,7 +10,7 @@
     {% for photo in photos %}
     <div class="row mb-3">
       
-      <div class="card mb-3" style="max-width: 1000 px;" >
+      <div class="card border-info mb-3" style="max-width: 1000 px;" >
           <div class="row no-gutters">
             <div class="col-md-4">
               <img src="/static/{{photo.img_path}}" class="card-img " alt="...">
