--- a/templates/display_user_details.html
+++ b/templates/display_user_details.html
@@ -15,7 +15,7 @@
             {%for photo in user_fav_photos %}
 
             <div class="row mb-3">
-                <div class="card mb-3" style="max-width: 500px;" >
+                <div class="card border-info mb-3" style="max-width: 500px;" >
                     <div class="row no-gutters">
                       <div class="col-md-4">
                         <img src="/static/{{photo.img_path}}" class="card-img" alt="...">
@@ -41,7 +41,7 @@
                 {%for rating_rec in user_rated_recs %}
 
                 <div class="row mb-3">
-                    <div class="card mb-3" style="max-width: 500px;" >
+                    <div class="card border-info mb-3" style="max-width: 500px;" >
                         <div class="row no-gutters">
                         <div class="col-md-4">
                             
